--- a/src/main/java/telas/TelaExibicaoDeDados.form
+++ b/src/main/java/telas/TelaExibicaoDeDados.form
@@ -6,7 +6,7 @@
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
-    <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
+    <SyntheticProperty name="generateCenter" type="boolean" value="true"/>
   </SyntheticProperties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
@@ -24,41 +24,41 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
-              <EmptySpace pref="199" max="32767" attributes="0"/>
+              <EmptySpace pref="208" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
                       <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="334" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
-                      <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="103" groupAlignment="1" attributes="0">
                           <Group type="102" attributes="0">
-                              <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Group type="102" alignment="1" attributes="0">
-                                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-                                      <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="btnProcessador" alignment="1" min="-2" pref="134" max="-2" attributes="0"/>
-                                          <Group type="102" alignment="1" attributes="0">
-                                              <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                                              <EmptySpace min="-2" pref="401" max="-2" attributes="0"/>
-                                          </Group>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                      <Group type="102" alignment="1" attributes="0">
+                                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                                          <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+                                          <EmptySpace min="-2" pref="401" max="-2" attributes="0"/>
+                                      </Group>
+                                      <Group type="102" alignment="0" attributes="0">
+                                          <Component id="lblInfoProcessadorFabricante" min="-2" pref="310" max="-2" attributes="0"/>
+                                          <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                                       </Group>
                                   </Group>
-                                  <Group type="102" alignment="0" attributes="0">
-                                      <Component id="lblInfoProcessadorFabricante" min="-2" pref="310" max="-2" attributes="0"/>
-                                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                                  <Group type="103" groupAlignment="1" max="-2" attributes="0">
+                                      <Component id="lblInfoProcessadorCPULogica" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="lblInfoProcessadorCPUFisicas" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="lblInfoProcessadorNome" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="jLabel5" alignment="0" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
-                              <EmptySpace min="61" pref="61" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="98" max="-2" attributes="0"/>
                           </Group>
-                          <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                              <Component id="lblInfoProcessadorCPULogica" alignment="0" max="32767" attributes="0"/>
-                              <Component id="lblInfoProcessadorCPUFisicas" alignment="0" max="32767" attributes="0"/>
-                              <Component id="lblInfoProcessadorNome" alignment="0" max="32767" attributes="0"/>
-                              <Component id="jLabel5" alignment="0" max="32767" attributes="0"/>
+                          <Group type="102" alignment="1" attributes="0">
+                              <Component id="btnProcessador" min="-2" pref="186" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="46" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
                               <Group type="103" groupAlignment="0" attributes="0">
@@ -107,9 +107,8 @@
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Group type="103" groupAlignment="1" max="-2" attributes="0">
                                       <Component id="lblInfoProcessos6" alignment="0" min="-2" max="-2" attributes="0"/>
-                                      <Component id="lblInfoProcessosUsoMemoria6" alignment="0" max="32767" attributes="0"/>
+                                      <Component id="lblInfoProcessosUsoMemoria6" alignment="0" pref="123" max="32767" attributes="0"/>
                                       <Component id="lblInfoProcessosNome6" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="lblInfoProcessosUsoCPU6" alignment="0" min="-2" pref="123" max="-2" attributes="0"/>
                                   </Group>
                                   <Group type="103" groupAlignment="1" max="-2" attributes="0">
                                       <Component id="lblInfoProcessos5" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -117,10 +116,11 @@
                                       <Component id="lblInfoProcessosNome5" alignment="0" max="32767" attributes="0"/>
                                       <Component id="lblInfoProcessosUsoCPU5" alignment="0" min="-2" pref="123" max="-2" attributes="0"/>
                                   </Group>
+                                  <Component id="lblInfoProcessosUsoCPU6" min="-2" pref="163" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
-                      <EmptySpace min="-2" pref="88" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
@@ -198,7 +198,7 @@
                                       <EmptySpace max="-2" attributes="0"/>
                                       <Component id="lblInfoProcessosUsoMemoria" min="-2" max="-2" attributes="0"/>
                                       <EmptySpace max="-2" attributes="0"/>
-                                      <Component id="lblInfoProcessosUsoCPU" pref="20" max="32767" attributes="0"/>
+                                      <Component id="lblInfoProcessosUsoCPU" pref="27" max="32767" attributes="0"/>
                                   </Group>
                               </Group>
                           </Group>
@@ -244,8 +244,6 @@
                               <Component id="lblInfoProcessosUsoMemoria3" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="lblInfoProcessosUsoCPU3" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="68" max="-2" attributes="0"/>
-                              <Component id="btnProcessador" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" attributes="0">
                               <Component id="lblInfoProcessos6" min="-2" max="-2" attributes="0"/>
@@ -257,6 +255,8 @@
                               <Component id="lblInfoProcessosUsoCPU6" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
+                      <EmptySpace min="-2" pref="68" max="-2" attributes="0"/>
+                      <Component id="btnProcessador" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="67" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
